WIP Feat: Added oidc account handler, cleaned few elements

--- a/public/login.ejs
+++ b/public/login.ejs
@@ -9,9 +9,9 @@
 <body>
 <div class="nlogin-container">
     <form action="<%= url %>" method="post">
-        <label for="name">
-            Name
-            <input id="name" name="name" placeholder="Name" type="text">
+        <label for="login">
+            Login
+            <input id="login" name="login" placeholder="Name" type="text">
         </label>
 
         <label for="password">
