--- a/public/login.ejs
+++ b/public/login.ejs
@@ -7,8 +7,12 @@
 
 </head>
 <body>
-<div class="nlogin-container">
-    <form action="<%= url %>" method="post">
+<div>
+    <% if (typeof error !== 'undefined') { %>
+        <p><%= error; %></p>
+    <% } else{ %>
+    <% } %>
+    <form action="<%= url; %>" method="post">
         <label for="login">
             Login
             <input id="login" name="login" placeholder="Name" type="text">
