--- a/public/login.ejs
+++ b/public/login.ejs
@@ -2,147 +2,260 @@
 <html lang="en">
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Monsters - Login</title>
-    <meta content="width=device-width, initial-scale=1" name="viewport">
 
     <style>
+        @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap");
+
+        * {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+            font-family: "Inter", "sans-serif";
+        }
+
         .container {
-            width: 100%;
-            min-height: 100vh;
+            background: #010b00;
+            height: 100vh;
+            width: 100vw;
+            display: flex;
+            align-items: center;
+        }
+
+        .container .left {
+            padding-bottom: 30px;
+            height: 80%;
             display: flex;
             flex-direction: column;
             justify-content: space-evenly;
             align-items: center;
-            flex-wrap: wrap;
-            overflow-y: auto;
-            overflow-x: hidden;
-            background: rgb(255, 255, 255);
-            color: #1e1e1e;
-            transition: 0.75s all ease-in-out;
+
+            flex: 1;
         }
 
-        .redText {
-            text-align: center;
-            font-size: 1.5rem;
-            color: red;
+        .container .left h2 {
+            color: #94a3b8;
+            font-size: 5.8rem;
+            font-weight: 700;
+            margin-bottom: 40px;
         }
 
-        form {
+        .container .left h2 span {
+            color: #7c3aed;
+            font-weight: 700;
+        }
+
+        .container .left .left-header__bottom {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+        }
+
+        .container .left .left-header__bottom span:first-child {
+            font-weight: 600;
+            color: #e2e8f0;
+            font-size: 1.875rem; /* 30px */
+            line-height: 2.25rem; /* 36px */
+        }
+
+        .container .left .left-header__bottom span:last-child {
+            color: #94a3b8;
+            margin-top: 8px;
+            font-size: 0.875rem; /* 14px */
+            line-height: 1.25rem; /* 20px */
+        }
+
+        .container .left span {
+            color: gray;
+        }
+
+        .container .left form {
+            display: flex;
+            gap: 20px;
+            flex-direction: column;
+        }
+
+        .container .left form label {
             display: flex;
             flex-direction: column;
-            justify-content: space-around;
-            align-items: center;
-            font-size: 1.2rem;
-            width: fit-content;
-            min-width: 350px;
-            max-width: 500px;
-            border-bottom: 1px solid grey;
-            border-bottom-left-radius: 10px;
-            border-bottom-right-radius: 10px;
-
-            input {
-                margin: 1rem;
-            }
+            color: white;
+            width: 300px;
+            color: #64748b;
+            font-size: 0.875rem; /* 14px */
+            line-height: 1.25rem; /* 20px */
         }
 
-        label {
-            font-size: 1.6em;
-            display: inline-block;
-            margin-right: 1rem;
-        }
-
-        input {
+        .container .left form input {
+            margin-top: 8px;
+            margin-bottom: 8px;
+            height: 3em;
+            border-radius: 4px;
+            background: #1f1f22;
             border: none;
-            outline: none;
-            width: 90%;
-            max-width: 200px;
-            font-size: 1.1em;
-            background: none;
-            color: #1e1e1e;
-            border-bottom: 1px solid #1e1e1e;
-            transition: 0.75s all ease-in-out;
+            padding: 0px 3px;
+            color: #cbd5e1;
         }
 
-        input:focus {
-            width: 90%;
-            max-width: 220px;
-            border-bottom: 1px solid rgb(249, 103, 59);
-            transition: 0.75s all ease-in-out;
+        .container .left form input::placeholder {
+            color: #334155;
         }
 
-        input::placeholder {
-            color: #1e1e1e;
-            transition: 0.75s all ease-in-out;
+        .container .left form .link-container {
+            display: flex;
+            justify-content: center;
+            margin-top: 40px;
         }
 
-        button {
-            background: linear-gradient(
-                    140deg,
-                    rgb(249, 103, 59) 0.5%,
-                    rgb(255, 255, 255) 0.5%
-            );
-            background-size: 100% 100%;
-            color: #1e1e1e;
-            padding: 3px;
-            margin: 10px 0;
-            border: 2px solid rgb(249, 103, 59);
-            border-radius: 5%;
-            box-shadow: 1px 1px 1px #000000;
-            font-size: 1.5em;
-            height: 45px;
-            width: 80%;
-            min-width: 150px;
-            max-width: fit-content;
-            transition: 0.75s all ease-in-out;
-            font-weight: 300;
-            letter-spacing: 0.9px;
+        .container .left form .link-container span {
+            font-size: 0.875rem; /* 14px */
+            line-height: 1.25rem; /* 20px */
+            color: #94a3b8;
+        }
+
+        .container .left form .link-container span a {
+            text-decoration: none;
+            color: #ddd6fe;
+        }
+
+        .container .left form button {
+            background: #7c3aed;
+            color: white;
+            font-weight: 600;
+            padding: 4px 0px;
+            border-radius: 5px;
+            padding: 6px 0px;
             cursor: pointer;
         }
 
-        button:hover {
-            box-shadow: none;
-            transition: 0.75s all ease-in-out;
-            background-size: 30000% 100%;
+        .error-container {
+            display: flex;
+            display: none;
+            justify-content: center;
+            color: rgb(114, 33, 33);
+            font-weight: 500;
+            font-size: 0.875rem; /* 14px */
+            line-height: 1.25rem; /* 20px */
         }
 
-        .mainHeader {
-            text-align: center;
-            font-size: 2rem;
-            font-weight: lighter;
-            letter-spacing: 0.9px;
-            padding: 1rem;
-            color: #000000;
+        .container .right {
+            flex: 1;
+        }
+
+        .container .right img {
+            height: 90%;
+            width: 90%;
+            object-fit: contain;
+        }
+
+        @media (min-width: 0px) and (max-width: 1280px) {
+            .container .right {
+                display: none;
+            }
+        }
+
+        @media (min-width: 0px) and (max-width: 400px) {
+            .container .left h2 {
+                text-align: center;
+                font-size: 3.4rem;
+                font-weight: 700;
+                margin-bottom: 40px;
+            }
+
+            .container .left .left-header__bottom span:first-child {
+                font-weight: 600;
+                color: #e2e8f0;
+                font-size: 1.375rem; /* 30px */
+                line-height: 2.25rem; /* 36px */
+            }
+
+            .container .left .left-header__bottom span:last-child {
+                color: #94a3b8;
+                margin-top: 8px;
+                font-size: 0.775rem; /* 14px */
+                line-height: 1.25rem; /* 20px */
+            }
+
+            .container .left form label {
+                display: flex;
+                flex-direction: column;
+                color: white;
+                width: 250px;
+                color: #64748b;
+                font-size: 0.875rem; /* 14px */
+                line-height: 1.25rem; /* 20px */
+            }
+        }
+
+        @media (min-width: 400px) and (max-width: 500px) {
+            .container .left h2 {
+                text-align: center;
+                font-size: 3.3rem;
+                font-weight: 700;
+                margin-bottom: 40px;
+            }
+
+            .container .left .left-header__bottom span:first-child {
+                font-weight: 600;
+                color: #e2e8f0;
+                font-size: 1.375rem; /* 30px */
+                line-height: 2.25rem; /* 36px */
+            }
+
+            .container .left .left-header__bottom span:last-child {
+                color: #94a3b8;
+                margin-top: 8px;
+                font-size: 0.775rem; /* 14px */
+                line-height: 1.25rem; /* 20px */
+            }
         }
     </style>
 </head>
+
+
 <body>
-<div class='container'>
-    <header class='mainHeader'>
-        Monsters game
-    </header>
-    <% if (typeof error !== 'undefined') { %>
-        <header class='redText'><%= error; %></header>
-    <% } %>
-    <form action="<%= url; %>" method="post">
-        <label for="login">
-            Login
-        </label>
+<div class="container">
+    <div class="left">
+        <div class="left-header">
+            <h2><span>M</span>onsters</h2>
+            <div class="left-header__bottom">
+                <span> Log in to your account</span>
+                <span> Welcome back! Please enter your details.</span>
+            </div>
+        </div>
+        <form action="<%= url; %>" method="post">
+            <label for="login">Login</label>
+            <% if (typeof userName !== 'undefined') { %>
+                <input id="login" name="login" placeholder="Name" type="text" value='<%= userName; %>'>
+            <% } else { %>
+                <input id="login" name="login" placeholder="Name" type="text">
+            <% } %>
 
-        <% if (typeof userName !== 'undefined') { %>
-            <input id="login" name="login" placeholder="Name" type="text" value='<%= userName; %>'>
-        <% } else { %>
-            <input id="login" name="login" placeholder="Name" type="text">
-        <% } %>
+            <label for="password">Password</label>
+            <input id="password" name="password" placeholder="Password" type="password">
 
-        <label for="password">
-            Password
-        </label>
+            <% if (typeof error !== 'undefined') { %>
+                <div class="error-container"><%= error; %></div>
+            <% } %>
 
-        <input id="password" name="password" placeholder="Password" type="password">
-
-        <button type="submit">Log in</button>
-    </form>
+            <div class="link-container">
+                <span>Dont have an account? <a href="https://kiszczyc.pl/">Sign up</a></span>
+            </div>
+            <button type="submit">Log in</button>
+        </form>
+    </div>
+    <div class="right">
+        <img src="/public/images/monsters-bg_3.jpg" alt="bg3" />
+    </div>
 </div>
+
+<% if (typeof error !== 'undefined') { %>
+    <script>
+      const errorContainer = document.querySelector(".error-container");
+      errorContainer.style.display = "flex";
+    </script>
+<% } %>
 
 </body>
 </html>
