--- a/public/login.ejs
+++ b/public/login.ejs
@@ -3,9 +3,7 @@
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Monsters - Login</title>
-
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap");
 
@@ -16,36 +14,60 @@
             font-family: "Inter", "sans-serif";
         }
 
+        body {
+            overflow-x: hidden;
+        }
+
         .container {
-            background: #010b00;
-            height: 100vh;
+            background: #f3f4f6;
+
+            height: fit-content;
+            min-height: 100vh;
             width: 100vw;
             display: flex;
             align-items: center;
         }
 
+        .container.dark {
+            background: #010b00;
+        }
+
         .container .left {
             padding-bottom: 30px;
-            height: 80%;
+            height: fit-content;
             display: flex;
             flex-direction: column;
             justify-content: space-evenly;
             align-items: center;
-
+            padding-bottom: 100px;
             flex: 1;
         }
 
         .container .left h2 {
-            color: #94a3b8;
+
+            color: #374151;
+
             font-size: 5.8rem;
             font-weight: 700;
             margin-bottom: 40px;
         }
 
+        .container.dark .left h2 {
+
+            color: #94a3b8;
+        }
+
         .container .left h2 span {
+            color: #e11d48;
+
+            font-weight: 700;
+        }
+
+        .container.dark .left h2 span {
             color: #7c3aed;
             font-weight: 700;
         }
+
 
         .container .left .left-header__bottom {
             display: flex;
@@ -55,34 +77,60 @@
 
         .container .left .left-header__bottom span:first-child {
             font-weight: 600;
-            color: #e2e8f0;
+            color: #64748b;
             font-size: 1.875rem; /* 30px */
             line-height: 2.25rem; /* 36px */
         }
 
+        .container.dark .left .left-header__bottom span:first-child {
+
+            color: #e2e8f0;
+        }
+
         .container .left .left-header__bottom span:last-child {
+
             color: #94a3b8;
             margin-top: 8px;
             font-size: 0.875rem; /* 14px */
             line-height: 1.25rem; /* 20px */
         }
 
+        .container.dark .left .left-header__bottom span:last-child {
+            color: #64748b;
+
+        }
+
+
         .container .left span {
             color: gray;
         }
 
         .container .left form {
+            height: 100%;
             display: flex;
+            flex-direction: column;
             gap: 20px;
             flex-direction: column;
+
         }
 
         .container .left form label {
             display: flex;
             flex-direction: column;
-            color: white;
+            color: #334155;
+
             width: 300px;
             color: #64748b;
+            font-size: 0.875rem; /* 14px */
+            line-height: 1.25rem; /* 20px */
+        }
+
+        .container.dark .left form label {
+            display: flex;
+            flex-direction: column;
+            color: white;
+            width: 300px;
+
             font-size: 0.875rem; /* 14px */
             line-height: 1.25rem; /* 20px */
         }
@@ -91,15 +139,34 @@
             margin-top: 8px;
             margin-bottom: 8px;
             height: 3em;
+            border: 1px solid #94a3b8;
             border-radius: 4px;
-            background: #1f1f22;
+            background: #f9fafb;
             border: none;
-            padding: 0px 3px;
-            color: #cbd5e1;
+            padding: 0px 5px;
+            font-weight: 600;
+            color: #475569;
         }
 
+        .container.dark .left form input {
+            margin-top: 8px;
+            margin-bottom: 8px;
+            height: 3em;
+            border-radius: 4px;
+            background: #1f1f22;
+            color: #cbd5e1;
+            border: none;
+            padding: 0px 3px;
+
+            font-weight: 600;
+
+        }
+
+
         .container .left form input::placeholder {
-            color: #334155;
+            color: #cbd5e1;
+            padding: 0px 4px;
+            font-weight: 500;
         }
 
         .container .left form .link-container {
@@ -111,10 +178,23 @@
         .container .left form .link-container span {
             font-size: 0.875rem; /* 14px */
             line-height: 1.25rem; /* 20px */
+            color: #475569;
+        }
+
+        .container.dark .left form .link-container span {
+            font-size: 0.875rem; /* 14px */
+            line-height: 1.25rem; /* 20px */
+
             color: #94a3b8;
         }
 
         .container .left form .link-container span a {
+            text-decoration: none;
+
+            color: #a855f7;
+        }
+
+        .container.dark .left form .link-container span a {
             text-decoration: none;
             color: #ddd6fe;
         }
@@ -125,6 +205,18 @@
             font-weight: 600;
             padding: 4px 0px;
             border-radius: 5px;
+            padding: 6px 0px;
+            border: 1px solid grey;
+            cursor: pointer;
+        }
+
+        .container.dark .left form button {
+            background: #8b5cf6;
+            color: white;
+            font-weight: 600;
+            padding: 4px 0px;
+            border-radius: 5px;
+
             padding: 6px 0px;
             cursor: pointer;
         }
@@ -148,6 +240,107 @@
             width: 90%;
             object-fit: contain;
         }
+
+
+        .theme-switch_container {
+            padding-top: 10px;
+
+            width: 80%;
+            display: flex;
+            justify-content: flex-end;
+        }
+
+        .theme-switch {
+
+
+            position: relative;
+            display: inline-block;
+            width: 60px;
+            height: 34px;
+        }
+
+        .theme-switch input {
+            display: none;
+        }
+
+        .theme-switch label {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            border-radius: 34px;
+            transition: background-color 0.4s;
+        }
+
+        .theme-switch label::before {
+            position: absolute;
+            content: "";
+            height: 26px;
+            width: 26px;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            border-radius: 50%;
+            transition: transform 0.4s;
+        }
+
+        .theme-switch input:checked + label {
+            background-color: #7c3aed; /* Kolor tła włączonego switcha */
+        }
+
+        .theme-switch input:checked + label::before {
+            transform: translateX(26px);
+        }
+
+
+        @media (min-width: 1600px) and (max-width: 1670px) {
+            .container .right {
+                flex: 1;
+                height: 90%;
+                width: 100%;
+
+            }
+        }
+
+        @media (min-width: 1500px) and (max-width: 1590px) {
+            .container .right {
+                flex: 1;
+                height: 80%;
+                width: 100%;
+
+            }
+        }
+
+        @media (min-width: 1400px) and (max-width: 1500px) {
+            .container .right {
+                flex: 1;
+                height: 72%;
+                width: 100%;
+
+            }
+        }
+
+        @media (min-width: 1300px) and (max-width: 1400px) {
+            .container .right {
+                flex: 1;
+                height: 65%;
+                width: 100%;
+
+            }
+        }
+
+        @media (min-width: 1280px) and (max-width: 1300px) {
+            .container .right {
+                flex: 1;
+                height: 65%;
+                width: 100%;
+
+            }
+        }
+
 
         @media (min-width: 0px) and (max-width: 1280px) {
             .container .right {
@@ -212,11 +405,16 @@
         }
     </style>
 </head>
-
-
 <body>
 <div class="container">
     <div class="left">
+        <div class="theme-switch_container">
+            <div class="theme-switch">
+                <input type="checkbox" id="theme-toggle">
+                <label for="theme-toggle"></label>
+            </div>
+        </div>
+
         <div class="left-header">
             <h2><span>M</span>onsters</h2>
             <div class="left-header__bottom">
@@ -245,17 +443,38 @@
             <button type="submit">Log in</button>
         </form>
     </div>
-    <div class="right">
-        <img src="/public/images/monsters-bg_3.jpg" alt="bg3" />
-    </div>
+
+    <span class="theme"></span>
 </div>
+<script>
 
-<% if (typeof error !== 'undefined') { %>
-    <script>
-      const errorContainer = document.querySelector(".error-container");
-      errorContainer.style.display = "flex";
-    </script>
-<% } %>
+  function toggleTheme() {
+    const container = document.querySelector('.container');
+    if (themeToggle.checked) {
+      localStorage.setItem('theme', 'light');
+      container.classList.add('dark');
+    } else {
+      localStorage.setItem('theme', 'dark');
+      container.classList.remove('dark');
+    }
+  }
 
+  const themeToggle = document.getElementById('theme-toggle');
+  const theme = localStorage.getItem('theme');
+  const error = true;
+  const errorContainer = document.querySelector('.error-container');
+  const themeContainer = document.querySelector('.theme');
+  const container = document.querySelector('.container');
+
+  const savedTheme = localStorage.getItem('theme');
+  if (savedTheme === 'light') {
+    themeToggle.checked = true;
+    toggleTheme();
+  }
+
+
+  if (error) errorContainer.style.display = 'flex';
+  themeToggle.addEventListener('change', toggleTheme);
+</script>
 </body>
 </html>
